<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>firok.tool.labelstudio</groupId>
    <artifactId>autopilot</artifactId>
    <version>0.4.0</version>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

        <lombok.version>1.18.30</lombok.version>
        <jackson.version>2.14.2</jackson.version>
        <connector.version>0.12.0</connector.version>
        <topaz.version>7.23.0</topaz.version>
        <wrench.version>0.31.0</wrench.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>firok.tool</groupId>
            <artifactId>labelstudio-connector</artifactId>
            <version>${connector.version}</version>
        </dependency>

        <dependency>
            <groupId>firok</groupId>
            <artifactId>topaz</artifactId>
            <version>${topaz.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>firok.tool</groupId>
            <artifactId>alloy-wrench</artifactId>
            <version>${wrench.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-base</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-controls</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-fxml</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-media</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-web</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.controlsfx</groupId>
                    <artifactId>controlsfx</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.kordamp.ikonli</groupId>
                    <artifactId>ikonli-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.kordamp.ikonli</groupId>
                    <artifactId>ikonli-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.kordamp.ikonli</groupId>
                    <artifactId>ikonli-javafx</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.kordamp.ikonli</groupId>
                    <artifactId>ikonli-materialdesign2-pack</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>

        <repository>
            <id>github-topaz</id>
            <url>https://maven.pkg.github.com/FirokOtaku/Topaz</url>
        </repository>
        <repository>
            <id>github-amber</id>
            <url>https://maven.pkg.github.com/FirokOtaku/Amber</url>
        </repository>
    </repositories>


    <build>
        <finalName>label-studio-autopilot-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <release>21</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>Compile With Annotation Processing</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>21</source>
                            <target>21</target>
                            <annotationProcessorPaths>
                                <path>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                    <version>${lombok.version}</version>
                                </path>
                            </annotationProcessorPaths>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
